GNOME Bugzilla – Bug 705836
egl-kms: set the EGL_PLATFORM explicitly
Last modified: 2014-04-30 16:01:23 UTC
Otherwise, if we try egl-wayland first, we get the environment variable from that, which crashes mesa trying to open the gbm device as a wayland display.
Created attachment 251345 [details] [review] egl-kms: set the EGL_PLATFORM explicitly
Comment on attachment 251345 [details] [review] egl-kms: set the EGL_PLATFORM explicitly This looks good to land to me, thanks. Reviewed-by: Robert Bragg <robert@linux.intel.com>
Attachment 251345 [details] pushed as dab0542 - egl-kms: set the EGL_PLATFORM explicitly
This patch has now effectively been reverted but it should be ok because the Wayland winsys also no longer sets the EGL_PLATFORM. See bug 728978.